# agent_develop

./: .gitignore  LICENSE  README.md
agent_client/: main.py  pyproject.toml
agent_client/src/client/: client_api.py  event_bus.py  main_window.py
agent_client/src/client/composite_widgets/: __init__.py  activity_bar.py  chat_history_page.py  function_bar.py  input_bar.py  main_content.py  panel.py  set_page.py  side_bar.py  status_bar.py
agent_client/src/client/delegates/: chat_bubble_delegate.py
agent_client/src/client/models/: chat_message_model.py
agent_client/src/client/views/: chat_list_view.py
agent_client/src/client/widgets/: SlideSwitch.py  splitter.py  splitter_handle.py  text_edit.py  theme_switch.py
agent_server/: main.py  pyproject.toml  set_logger.py
agent_server/src/server/: __init__.py  agent.py  config.py
agent_server/src/server/assist/: __init__.py  assist.py  durable_reflection.py  remind_task_manager.py  type.py  websocket_connection_manager.py
agent_server/src/server/graph/: graph.py  node.py  state.py  type.py
agent_server/src/server/graph/assist/: assist.py  base_structured_output_extractor.py  type.py
agent_server/src/server/tts/: GPT_SoVITS.py
mcp_server/: pyproject.toml
mcp_server/src/mcp_server/: mcp_server.py
