[project]
name = "agent-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "fastapi[standard]>=0.117.1",
    "langchain>=0.3.27",
    "langchain-deepseek>=0.1.4",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langmem>=0.0.29",
    "numpy>=2.3.4",
    "sounddevice>=0.5.3",
]

[tool.black]
line-length = 119
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = ["server"] 
line_length = 119

[tool.fastapi-cli]
reload_exclude = ["*.log", "*/.log"]
