[project]
name = "mcpsever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-tavily>=0.2.11",
    "mcp[cli]>=1.12.2",
    "numexpr>=2.11.0",
]

[tool.black]
line-length = 119
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = ["server"] 
line_length = 119
